ros2_ws/log/build_2024-09-03_19-50-58/autonomo/stderr.log
  File "/home/ezechiel/code/AyDpVA/ros2_ws/install/autonomo/lib/python3.12/site-packages/autonomo/publisher.py", line 11
    publisher = node.create_publisher(String, 'topic' 10)
                                              ^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

